--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Мат. метода</title> 
-	<script type="text/javascript" src="index.jsx" defer></script>
-	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet">
-</head>
-<body>
-	<div id="root"></div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Мат. метода</title><script type="text/javascript" src="/src.05fbafb1.js" defer=""></script><link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet"><link rel="stylesheet" href="/src.d6441cb7.css"></head><body> <div id="root"></div> </body></html>
